# guix-rclip-client-cli-wayland

./: Cargo.toml  README.org  build.rs  guix.scm
src/: clipboard.rs  common.rs  main_cli.rs  rclip_config.rs
