[package]
name = "rclip"
version = "1.0.3"
edition = "2021"
description = "rclip clipboard client" 
keywords = ["clipboard", "remoting"]
license = "GPL"
repository = "https://github.com/yveszoundi/rclip"
authors = [
	"Yves Zoundi <yves_zoundi@hotmail.com>"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rclip-client-cli"
path = "src/main_cli.rs"

[dependencies]
clap = "^2.33"
nix="^0.26"
wl-clipboard-rs = "^0.4"
rustls = { version = "^0.20", features = ["dangerous_configuration"] }
dirs = "^4.0"
serde = { version = "^1.0", features = ["derive"] }
toml = "^0.5"
